--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 spring.datasource.url = jdbc:h2:~/GashDB
 spring.datasource.username = sa
 spring.datasource.password =
+spring.datasource.driver-class-name=org.h2.Driver
 
 # JPA/Hibernate properties
 spring.jpa.show-sql = true
@@ -12,4 +13,5 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
